Added the ability for button to make api call and add data to the component

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
             <h4 id="slip-title">Advice #000</h4>
             <p id="slip-advice">
                 
+
+               <span><img src="pattern-divider-desktop.svg" alt=""></span>  
             </p>
 
-            <img src="/images//pattern-divider-desktop.svg" alt="">
+            <img src="pattern-divider-desktop.svg" alt="">
 
-            <button>Dice</button>
+            <button id="generate-advice-btn"> <embed src="icon-dice.svg"></button>
         </div>
 
     </main>  
